--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,8 @@
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-hot-loader": "4.12.19",
+    "react-router-dom": "5.1.2",
+    "react-tracked": "1.0.6",
     "tough-cookie": "2.5.0"
   },
   "devDependencies": {
@@ -39,7 +41,7 @@
     "babel-loader": "8.0.6",
     "concurrently": "5.1.0",
     "core-js": "3.6.4",
-    "cross-env": "^7.0.0",
+    "cross-env": "7.0.0",
     "electron": "7.1.11",
     "fork-ts-checker-webpack-plugin": "1.5.0",
     "jest": "25.1.0",
