--- a/app/package.json
+++ b/app/package.json
@@ -20,8 +20,8 @@
     "react-dom": "16.12.0",
     "react-hot-loader": "4.12.19",
     "react-router-dom": "5.1.2",
-    "react-tracked": "1.0.6",
-    "tough-cookie": "2.5.0"
+    "tough-cookie": "2.5.0",
+    "use-context-selector": "1.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.8.4",
