--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "egoroof-blowfish": "2.2.1",
     "express": "4.17.1",
     "howler": "2.1.3",
+    "lodash": "4.17.15",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-hot-loader": "4.12.19",
@@ -34,6 +35,7 @@
     "@types/express": "^4.17.2",
     "@types/howler": "2.1.2",
     "@types/jest": "^25.1.1",
+    "@types/lodash": "4.14.108",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@types/tough-cookie": "2.3.6",
