--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "egoroof-blowfish": "2.2.1",
     "express": "4.17.1",
     "howler": "2.1.3",
+    "immer": "6.0.3",
     "lodash": "4.17.15",
     "react": "16.12.0",
     "react-dom": "16.12.0",
@@ -47,7 +48,7 @@
     "electron": "7.1.11",
     "fork-ts-checker-webpack-plugin": "1.5.0",
     "jest": "25.1.0",
-    "prettier": "1.19.1",
+    "prettier": "2.0.4",
     "ts-node-dev": "1.0.0-pre.44",
     "typescript": "3.7.5",
     "webpack": "4.41.5",
