--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "react-dom": "16.12.0",
     "react-hot-loader": "4.12.19",
     "react-router-dom": "5.1.2",
+    "theme-ui": "0.3.1",
     "tough-cookie": "2.5.0",
     "use-context-selector": "1.0.1"
   },
@@ -39,13 +40,19 @@
     "@types/lodash": "4.14.108",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "@types/theme-ui": "0.3.1",
     "@types/tough-cookie": "2.3.6",
+    "@typescript-eslint/eslint-plugin": "2.27.0",
+    "@typescript-eslint/parser": "2.27.0",
     "babel-jest": "25.1.0",
     "babel-loader": "8.0.6",
     "concurrently": "5.1.0",
     "core-js": "3.6.4",
     "cross-env": "7.0.0",
     "electron": "7.1.11",
+    "eslint": "6.8.0",
+    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react-hooks": "3.0.0",
     "fork-ts-checker-webpack-plugin": "1.5.0",
     "jest": "25.1.0",
     "prettier": "2.0.4",
