--- a/app/babel.config.json
+++ b/app/babel.config.json
@@ -10,7 +10,8 @@
             }
         ],
         "@babel/preset-typescript",
-        "@babel/preset-react"
+        "@babel/preset-react",
+        "linaria/babel"
     ],
     "plugins": [
         "@babel/plugin-proposal-numeric-separator",
