--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "express": "4.17.1",
     "howler": "2.1.3",
     "immer": "6.0.3",
+    "linaria": "1.3.3",
     "lodash": "4.17.15",
     "react": "16.12.0",
     "react-dom": "16.12.0",
@@ -48,12 +49,14 @@
     "concurrently": "5.1.0",
     "core-js": "3.6.4",
     "cross-env": "7.0.0",
+    "css-loader": "3.5.2",
     "electron": "7.1.11",
     "eslint": "6.8.0",
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "3.0.0",
     "fork-ts-checker-webpack-plugin": "1.5.0",
     "jest": "25.1.0",
+    "mini-css-extract-plugin": "0.9.0",
     "prettier": "2.0.4",
     "ts-node-dev": "1.0.0-pre.44",
     "typescript": "3.7.5",
