--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "immer": "6.0.3",
     "linaria": "1.3.3",
     "lodash": "4.17.15",
+    "normalize.css": "^8.0.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-hot-loader": "4.12.19",
@@ -40,7 +41,6 @@
     "@types/lodash": "4.14.108",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
-    "@types/theme-ui": "0.3.1",
     "@types/tough-cookie": "2.3.6",
     "@typescript-eslint/eslint-plugin": "2.27.0",
     "@typescript-eslint/parser": "2.27.0",
