--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -19,7 +19,7 @@
         "plugin:react-hooks/recommended"
     ],
     "rules": {
-        "eqeqeq": "warn",
+        "eqeqeq": "error",
         "@typescript-eslint/no-unnecessary-condition": ["error", { "ignoreRhs": true }],
         // "@typescript-eslint/strict-boolean-expressions": ["warn", { "ignoreRhs": true }],
         "@typescript-eslint/no-unused-vars": ["warn", { "varsIgnorePattern": "^_", "argsIgnorePattern": "^_" }],
@@ -27,6 +27,7 @@
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/no-use-before-define": "off",
         "@typescript-eslint/no-explicit-any": "off",
-        "@typescript-eslint/member-delimiter-style": "off"
+        "@typescript-eslint/member-delimiter-style": "off",
+        "@typescript-eslint/no-empty-function": ["error", { "allow": ["arrowFunctions"] }]
     }
 }
