--- a/app/package.json
+++ b/app/package.json
@@ -26,7 +26,6 @@
     "react-hot-loader": "4.12.19",
     "react-router-dom": "5.1.2",
     "react-slider": "1.0.3",
-    "react-zondicons": "1.1.9",
     "tough-cookie": "2.5.0",
     "use-context-selector": "1.0.1"
   },
@@ -61,6 +60,7 @@
     "jest": "25.1.0",
     "mini-css-extract-plugin": "0.9.0",
     "prettier": "2.0.4",
+    "react-svg-loader": "3.0.3",
     "ts-node-dev": "1.0.0-pre.44",
     "typescript": "3.7.5",
     "webpack": "4.41.5",
