--- a/app/.prettierrc.json
+++ b/app/.prettierrc.json
@@ -4,5 +4,15 @@
     "semi": false,
     "printWidth": 120,
     "jsxBracketSameLine": true,
-    "arrowParens": "avoid"
+    "arrowParens": "avoid",
+    "overrides": [
+        {
+            "files": [
+                "*.md"
+            ],
+            "options": {
+                "tabWidth": 2
+            }
+        }
+    ]
 }
