--- a/app/package.json
+++ b/app/package.json
@@ -1,71 +1,72 @@
 {
-  "name": "yamplayer2",
-  "version": "1.0.0",
-  "license": "MIT",
-  "scripts": {
-    "electron:build:FORGOT_WHAT_THIS_DOES": "cross-env NODE_ENV=development webpack",
-    "electron:serve-hot": "cross-env NODE_ENV=development webpack-dev-server --hot --port 8180",
-    "electron:start": "cross-env NODE_ENV=development electron src/main.js",
-    "backend:start": "ts-node-dev --type-check --no-notify src/backend/index.ts",
-    "test": "jest src",
-    "test:watch": "jest src --watch",
-    "develop": "concurrently -k \"npm:backend:start\" \"npm:electron:serve-hot\" \"npm:electron:start\""
-  },
-  "dependencies": {
-    "@types/react-slider": "1.0.0",
-    "axios": "0.19.2",
-    "egoroof-blowfish": "2.2.1",
-    "express": "4.17.1",
-    "howler": "2.1.3",
-    "immer": "6.0.3",
-    "linaria": "1.3.3",
-    "lodash": "4.17.15",
-    "normalize.css": "^8.0.1",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "react-hot-loader": "4.12.19",
-    "react-router-dom": "5.1.2",
-    "react-slider": "1.0.3",
-    "tough-cookie": "2.5.0",
-    "use-context-selector": "1.0.1"
-  },
-  "devDependencies": {
-    "@babel/core": "7.8.4",
-    "@babel/plugin-proposal-class-properties": "7.5.5",
-    "@babel/plugin-proposal-numeric-separator": "^7.8.3",
-    "@babel/preset-env": "7.8.4",
-    "@babel/preset-react": "7.8.3",
-    "@babel/preset-typescript": "7.8.3",
-    "@hot-loader/react-dom": "^16.11.0",
-    "@types/express": "^4.17.2",
-    "@types/howler": "2.1.2",
-    "@types/jest": "^25.1.1",
-    "@types/lodash": "4.14.108",
-    "@types/react": "^16.9.19",
-    "@types/react-dom": "^16.9.5",
-    "@types/tough-cookie": "2.3.6",
-    "@typescript-eslint/eslint-plugin": "2.27.0",
-    "@typescript-eslint/parser": "2.27.0",
-    "babel-jest": "25.1.0",
-    "babel-loader": "8.0.6",
-    "concurrently": "5.1.0",
-    "core-js": "3.6.4",
-    "cross-env": "7.0.0",
-    "css-loader": "3.5.2",
-    "electron": "7.1.11",
-    "eslint": "6.8.0",
-    "eslint-plugin-react": "7.19.0",
-    "eslint-plugin-react-hooks": "3.0.0",
-    "fork-ts-checker-webpack-plugin": "1.5.0",
-    "jest": "25.1.0",
-    "mini-css-extract-plugin": "0.9.0",
-    "prettier": "2.0.4",
-    "react-svg-loader": "3.0.3",
-    "ts-node-dev": "1.0.0-pre.44",
-    "typescript": "3.7.5",
-    "webpack": "4.41.5",
-    "webpack-cli": "3.3.10",
-    "webpack-dev-server": "3.10.1",
-    "webpack-merge": "4.2.2"
-  }
+    "name": "yamplayer2",
+    "version": "1.0.0",
+    "license": "MIT",
+    "scripts": {
+        "electron:build:FORGOT_WHAT_THIS_DOES": "cross-env NODE_ENV=development webpack",
+        "electron:serve-hot": "cross-env NODE_ENV=development webpack-dev-server --hot --port 8180",
+        "electron:start": "cross-env NODE_ENV=development electron src/main.js",
+        "backend:start": "ts-node-dev --type-check --no-notify src/backend/index.ts",
+        "test": "jest src",
+        "test:watch": "jest src --watch",
+        "develop": "concurrently -k \"npm:backend:start\" \"npm:electron:serve-hot\" \"npm:electron:start\""
+    },
+    "dependencies": {
+        "@types/react-router-dom": "^5.1.5",
+        "@types/react-slider": "1.0.0",
+        "axios": "0.19.2",
+        "egoroof-blowfish": "2.2.1",
+        "express": "4.17.1",
+        "howler": "2.1.3",
+        "immer": "6.0.3",
+        "linaria": "1.3.3",
+        "lodash": "4.17.15",
+        "normalize.css": "8.0.1",
+        "react": "16.12.0",
+        "react-dom": "16.12.0",
+        "react-hot-loader": "4.12.19",
+        "react-router-dom": "5.1.2",
+        "react-slider": "1.0.3",
+        "tough-cookie": "2.5.0",
+        "use-context-selector": "1.0.1"
+    },
+    "devDependencies": {
+        "@babel/core": "7.8.4",
+        "@babel/plugin-proposal-class-properties": "7.5.5",
+        "@babel/plugin-proposal-numeric-separator": "^7.8.3",
+        "@babel/preset-env": "7.8.4",
+        "@babel/preset-react": "7.8.3",
+        "@babel/preset-typescript": "7.8.3",
+        "@hot-loader/react-dom": "^16.11.0",
+        "@types/express": "^4.17.2",
+        "@types/howler": "2.1.2",
+        "@types/jest": "^25.1.1",
+        "@types/lodash": "4.14.108",
+        "@types/react": "^16.9.19",
+        "@types/react-dom": "^16.9.5",
+        "@types/tough-cookie": "2.3.6",
+        "@typescript-eslint/eslint-plugin": "2.27.0",
+        "@typescript-eslint/parser": "2.27.0",
+        "babel-jest": "25.1.0",
+        "babel-loader": "8.0.6",
+        "concurrently": "5.1.0",
+        "core-js": "3.6.4",
+        "cross-env": "7.0.0",
+        "css-loader": "3.5.2",
+        "electron": "7.1.11",
+        "eslint": "6.8.0",
+        "eslint-plugin-react": "7.19.0",
+        "eslint-plugin-react-hooks": "3.0.0",
+        "fork-ts-checker-webpack-plugin": "1.5.0",
+        "jest": "25.1.0",
+        "mini-css-extract-plugin": "0.9.0",
+        "prettier": "2.0.4",
+        "react-svg-loader": "3.0.3",
+        "ts-node-dev": "1.0.0-pre.44",
+        "typescript": "3.7.5",
+        "webpack": "4.41.5",
+        "webpack-cli": "3.3.10",
+        "webpack-dev-server": "3.10.1",
+        "webpack-merge": "4.2.2"
+    }
 }
