--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
         "immer": "^6.0.3",
         "linaria": "^1.3.3",
         "lodash": "^4.17.15",
+        "mariadb": "^2.3.1",
         "normalize.css": "^8.0.1",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
