--- a/app/package.json
+++ b/app/package.json
@@ -63,6 +63,7 @@
         "mini-css-extract-plugin": "^0.9.0",
         "prettier": "^2.0.4",
         "react-svg-loader": "^3.0.3",
+        "testcontainers": "^3.2.0",
         "ts-node-dev": "^1.0.0-pre.44",
         "typescript": "~3.8.3",
         "webpack": "^4.41.5",
