jest silent output on success

--- a/app/jest.config.json
+++ b/app/jest.config.json
@@ -1,3 +1,4 @@
 {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "reporters": [["jest-silent-reporter", { "showPaths": true, "useDots": true }]]
 }
