--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,6 @@
         "electron:start": "cross-env NODE_ENV=development electron src/main.js",
         "backend:start": "ts-node-dev --type-check --no-notify src/backend/index.ts",
         "test": "jest",
-        "test:watch": "jest --watch",
         "develop": "concurrently -k \"yarn:backend:start\" \"yarn:electron:serve-hot\" \"yarn:electron:start\""
     },
     "dependencies": {
@@ -60,6 +59,7 @@
         "eslint-plugin-react-hooks": "^3.0.0",
         "fork-ts-checker-webpack-plugin": "^1.5.0",
         "jest": "^25.1.0",
+        "jest-silent-reporter": "^0.2.1",
         "mini-css-extract-plugin": "^0.9.0",
         "prettier": "^2.0.4",
         "react-svg-loader": "^3.0.3",
