refactoring mostly; add library tracks page

--- a/app/.prettierrc.json
+++ b/app/.prettierrc.json
@@ -7,12 +7,11 @@
     "arrowParens": "avoid",
     "overrides": [
         {
-            "files": [
-                "*.md"
-            ],
+            "files": ["*.md"],
             "options": {
                 "tabWidth": 2
             }
         }
-    ]
+    ],
+    "endOfLine": "auto"
 }
