--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-hot-loader": "^4.12.19",
+        "react-rating": "^2.0.5",
         "react-router-dom": "^5.1.2",
         "react-slider": "^1.0.3",
         "tough-cookie": "^2.5.0",
