--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,8 @@
         "electron:start": "cross-env NODE_ENV=development electron src/main.js",
         "backend:start": "ts-node-dev --type-check --no-notify src/backend/index.ts",
         "test": "jest",
-        "develop": "concurrently -k \"yarn:backend:start\" \"yarn:electron:serve-hot\" \"yarn:electron:start\""
+        "develop": "concurrently -k \"yarn:backend:start\" \"yarn:electron:serve-hot\" \"yarn:electron:start\"",
+        "frontend:build": "cross-env NODE_ENV=production webpack"
     },
     "dependencies": {
         "axios": "^0.19.2",
