tests should fail on unhandled promise rejection

--- a/app/jest.config.json
+++ b/app/jest.config.json
@@ -1,4 +1,5 @@
 {
     "testEnvironment": "node",
-    "reporters": [["jest-silent-reporter", { "showPaths": true, "useDots": true }]]
+    "reporters": [["jest-silent-reporter", { "showPaths": true, "useDots": true }]],
+    "setupFiles": ["<rootDir>/jest.setup.js"]
 }
