--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
         "frontend:build": "cross-env NODE_ENV=production webpack"
     },
     "dependencies": {
+        "@types/sqlstring": "^2.2.1",
         "axios": "^0.19.2",
         "egoroof-blowfish": "^2.2.1",
         "express": "^4.17.1",
@@ -27,6 +28,7 @@
         "react-rating": "^2.0.5",
         "react-router-dom": "^5.1.2",
         "react-slider": "^1.0.3",
+        "sqlstring": "^2.3.2",
         "tough-cookie": "^2.5.0",
         "use-context-selector": "^1.0.1"
     },
