fix eslint warning that no react version is specified

--- a/app/src/.eslintrc.json
+++ b/app/src/.eslintrc.json
@@ -10,6 +10,11 @@
             "jsx": true
         }
     },
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
     "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/eslint-recommended",
