--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
         "backend:start": "ts-node-dev --type-check --no-notify src/backend/index.ts",
         "test": "jest",
         "lint": "eslint \"./src/**/*.{ts,tsx}\"",
+        "typecheck": "tsc --noEmit",
         "develop": "concurrently -k \"yarn:backend:start\" \"yarn:electron:serve-hot\" \"yarn:electron:start\"",
         "frontend:build": "cross-env NODE_ENV=production webpack"
     },
