format check in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
       with:
         node-version: '14'
     - run: yarn --cwd app install --frozen-lockfile
+    - run: yarn --cwd app run typecheck
     - run: yarn --cwd app test
     - run: yarn --cwd app run lint
-    - run: yarn --cwd app run typecheck
+    - run: yarn --cwd app run format:check    
