--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@types/sqlstring": "^2.2.1",
         "axios": "^0.19.2",
+        "axios-cache-adapter": "^2.5.0",
         "egoroof-blowfish": "^2.2.1",
         "express": "^4.17.1",
         "howler": "^2.1.3",
