--- a/app/babel.config.json
+++ b/app/babel.config.json
@@ -15,12 +15,7 @@
     ],
     "plugins": [
         "@babel/plugin-proposal-numeric-separator",
-        [
-            "@babel/plugin-proposal-class-properties",
-            {
-                "loose": true
-            }
-        ],
+        ["@babel/plugin-proposal-class-properties"],
         "react-hot-loader/babel"
     ]
 }
