--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -7,7 +7,8 @@
         "jsx": "react",
         "strict": true,
         "esModuleInterop": true,
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "useDefineForClassFields": true
     },
     "include": ["./src/**/*"]
 }
