--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
         "frontend:build": "cross-env NODE_ENV=production webpack"
     },
     "dependencies": {
+        "@types/plist": "^3.0.2",
         "@types/sqlstring": "^2.2.1",
         "axios": "^0.19.2",
         "axios-cache-adapter": "^2.5.0",
@@ -27,6 +28,7 @@
         "lodash": "^4.17.15",
         "mariadb": "^2.3.1",
         "normalize.css": "^8.0.1",
+        "plist": "^3.0.1",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-hot-loader": "^4.12.19",
@@ -35,7 +37,7 @@
         "react-slider": "^1.0.3",
         "sqlstring": "^2.3.2",
         "tough-cookie": "^2.5.0",
-        "use-context-selector": "^1.0.1"
+        "use-context-selector": "1.1.1"
     },
     "devDependencies": {
         "@babel/core": "^7.8.4",
@@ -71,6 +73,7 @@
         "jest-silent-reporter": "^0.2.1",
         "mini-css-extract-plugin": "^0.9.0",
         "prettier": "^2.0.4",
+        "prettier-plugin-jsdoc": "^0.3.4",
         "react-svg-loader": "^3.0.3",
         "testcontainers": "^3.2.0",
         "ts-node-dev": "^1.0.0-pre.44",
