--- a/app/src/.eslintrc.json
+++ b/app/src/.eslintrc.json
@@ -27,7 +27,10 @@
         "eqeqeq": "error",
         "@typescript-eslint/no-unnecessary-condition": ["error", { "ignoreRhs": true }],
         // "@typescript-eslint/strict-boolean-expressions": ["warn", { "ignoreRhs": true }],
-        "@typescript-eslint/no-unused-vars": ["warn", { "varsIgnorePattern": "^_", "argsIgnorePattern": "^_" }],
+        "@typescript-eslint/no-unused-vars": [
+            "warn",
+            { "varsIgnorePattern": "^_", "argsIgnorePattern": "^_" }
+        ],
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/no-use-before-define": "off",
