--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
         "@types/sqlstring": "^2.2.1",
         "axios": "^0.19.2",
         "axios-cache-adapter": "^2.5.0",
+        "bottleneck": "^2.19.5",
         "egoroof-blowfish": "^2.2.1",
         "express": "^4.17.1",
         "howler": "^2.1.3",
