--- a/app/package.json
+++ b/app/package.json
@@ -65,7 +65,7 @@
         "core-js": "^3.6.4",
         "cross-env": "^7.0.0",
         "css-loader": "^3.5.2",
-        "electron": "^7.1.11",
+        "electron": "11.2.0",
         "eslint": "^6.8.0",
         "eslint-plugin-react": "^7.19.0",
         "eslint-plugin-react-hooks": "^3.0.0",
@@ -73,7 +73,7 @@
         "jest": "^25.1.0",
         "jest-silent-reporter": "^0.2.1",
         "mini-css-extract-plugin": "^0.9.0",
-        "prettier": "^2.0.4",
+        "prettier": "https://github.com/robeady/prettier-fork",
         "prettier-plugin-jsdoc": "^0.3.4",
         "react-svg-loader": "^3.0.3",
         "testcontainers": "^3.2.0",
