--- a/app/src/.eslintrc.json
+++ b/app/src/.eslintrc.json
@@ -36,6 +36,7 @@
         "@typescript-eslint/no-use-before-define": "off",
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/member-delimiter-style": "off",
-        "@typescript-eslint/no-empty-function": ["error", { "allow": ["arrowFunctions"] }]
+        "@typescript-eslint/no-empty-function": ["error", { "allow": ["arrowFunctions"] }],
+        "react/prop-types": "off"
     }
 }
