--- a/app/package.json
+++ b/app/package.json
@@ -25,7 +25,7 @@
         "express": "^4.17.1",
         "howler": "^2.1.3",
         "immer": "^6.0.3",
-        "linaria": "^1.3.3",
+        "linaria": "2.0.2",
         "lodash": "^4.17.15",
         "mariadb": "^2.3.1",
         "normalize.css": "^8.0.1",
@@ -41,12 +41,12 @@
         "use-context-selector": "1.1.1"
     },
     "devDependencies": {
-        "@babel/core": "^7.8.4",
-        "@babel/plugin-proposal-class-properties": "^7.5.5",
-        "@babel/plugin-proposal-numeric-separator": "^7.8.3",
-        "@babel/preset-env": "^7.8.4",
-        "@babel/preset-react": "^7.8.3",
-        "@babel/preset-typescript": "^7.8.3",
+        "@babel/core": "^7.12.10",
+        "@babel/plugin-proposal-class-properties": "^7.12.1",
+        "@babel/plugin-proposal-numeric-separator": "^7.12.7",
+        "@babel/preset-env": "^7.12.11",
+        "@babel/preset-react": "^7.12.10",
+        "@babel/preset-typescript": "^7.12.7",
         "@hot-loader/react-dom": "^16.11.0",
         "@types/express": "^4.17.2",
         "@types/howler": "^2.1.2",
