scrap column mapping concept
it doesn't make sense because we don't always know what column a value corresponds to e.g. in a filter query. instead, we will universally define the mapping between js type and types produced by the database driver

--- a/app/package.json
+++ b/app/package.json
@@ -39,6 +39,7 @@
         "sanitize.css": "^12.0.1",
         "sqlstring": "^2.3.2",
         "tough-cookie": "^2.5.0",
+        "ts-custom-error": "^3.2.0",
         "use-context-selector": "1.1.1"
     },
     "devDependencies": {
