--- a/app/package.json
+++ b/app/package.json
@@ -40,7 +40,8 @@
         "sqlstring": "^2.3.2",
         "tough-cookie": "^2.5.0",
         "ts-custom-error": "^3.2.0",
-        "use-context-selector": "1.1.1"
+        "use-context-selector": "1.1.1",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "@babel/core": "^7.12.10",
@@ -59,6 +60,7 @@
         "@types/react-router-dom": "^5.1.5",
         "@types/react-slider": "^1.0.0",
         "@types/tough-cookie": "^2.3.6",
+        "@types/uuid": "^8.3.0",
         "@typescript-eslint/eslint-plugin": "^2.27.0",
         "@typescript-eslint/parser": "^2.27.0",
         "babel-jest": "^25.1.0",
