--- a/app/package.json
+++ b/app/package.json
@@ -12,10 +12,11 @@
         "format": "prettier --write --ignore-path .gitignore \"**/*.{js,ts,tsx,json}\"",
         "format:check": "prettier --check --ignore-path .gitignore \"**/*.{js,ts,tsx,json}\"",
         "typecheck": "tsc --noEmit",
-        "develop": "concurrently -k \"yarn:backend:start\" \"yarn:electron:serve-hot\" \"yarn:electron:start\"",
+        "start": "concurrently -k \"yarn:backend:start\" \"yarn:electron:serve-hot\" \"yarn:electron:start\"",
         "frontend:build": "cross-env NODE_ENV=production webpack"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^1.5.0",
         "@types/plist": "^3.0.2",
         "@types/sqlstring": "^2.2.1",
         "axios": "^0.19.2",
@@ -34,6 +35,7 @@
         "react-dom": "^16.12.0",
         "react-hot-loader": "^4.12.19",
         "react-rating": "^2.0.5",
+        "react-redux": "^7.2.2",
         "react-router-dom": "^5.1.2",
         "react-slider": "^1.0.3",
         "sanitize.css": "^12.0.1",
@@ -57,12 +59,13 @@
         "@types/lodash": "^4.14.108",
         "@types/react": "^16.9.19",
         "@types/react-dom": "^16.9.5",
+        "@types/react-redux": "^7.1.16",
         "@types/react-router-dom": "^5.1.5",
         "@types/react-slider": "^1.0.0",
         "@types/tough-cookie": "^2.3.6",
         "@types/uuid": "^8.3.0",
-        "@typescript-eslint/eslint-plugin": "^2.27.0",
-        "@typescript-eslint/parser": "^2.27.0",
+        "@typescript-eslint/eslint-plugin": "^4.2.0",
+        "@typescript-eslint/parser": "^4.15.1",
         "babel-jest": "^25.1.0",
         "babel-loader": "^8.0.6",
         "concurrently": "^5.1.0",
@@ -71,8 +74,10 @@
         "css-loader": "^3.5.2",
         "electron": "11.2.0",
         "eslint": "^6.8.0",
+        "eslint-config-prettier": "^7.2.0",
         "eslint-plugin-react": "^7.19.0",
         "eslint-plugin-react-hooks": "^3.0.0",
+        "eslint-plugin-unicorn": "^28.0.1",
         "fork-ts-checker-webpack-plugin": "^1.5.0",
         "jest": "^25.1.0",
         "jest-silent-reporter": "^0.2.1",
@@ -82,7 +87,7 @@
         "react-svg-loader": "^3.0.3",
         "testcontainers": "^3.2.0",
         "ts-node-dev": "^1.0.0-pre.44",
-        "typescript": "~3.8.3",
+        "typescript": "~4.1.5",
         "webpack": "^4.41.5",
         "webpack-cli": "^3.3.10",
         "webpack-dev-server": "^3.10.1",
