--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -8,7 +8,8 @@
         "strict": true,
         "esModuleInterop": true,
         "resolveJsonModule": true,
-        "useDefineForClassFields": true
+        "useDefineForClassFields": true,
+        "noUncheckedIndexedAccess": true
     },
     "include": ["./src/**/*"]
 }
