--- a/app/package.json
+++ b/app/package.json
@@ -34,6 +34,7 @@
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-hot-loader": "^4.12.19",
+        "react-icons": "^4.2.0",
         "react-rating": "^2.0.5",
         "react-redux": "^7.2.2",
         "react-router-dom": "^5.1.2",
