--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
         "frontend:build": "cross-env NODE_ENV=production webpack"
     },
     "dependencies": {
+        "@popperjs/core": "^2.9.2",
         "@reduxjs/toolkit": "^1.5.0",
         "@types/plist": "^3.0.2",
         "@types/sqlstring": "^2.2.1",
@@ -35,6 +36,7 @@
         "react-dom": "^16.12.0",
         "react-hot-loader": "^4.12.19",
         "react-icons": "^4.2.0",
+        "react-popper": "^2.2.5",
         "react-rating": "^2.0.5",
         "react-redux": "^7.2.2",
         "react-router-dom": "^5.1.2",
