--- a/app/package.json
+++ b/app/package.json
@@ -78,6 +78,7 @@
         "electron": "11.2.0",
         "eslint": "^7.27.0",
         "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-jest": "^24.3.6",
         "eslint-plugin-react": "^7.23.2",
         "eslint-plugin-react-hooks": "^4.2.0",
         "eslint-plugin-unicorn": "^32.0.1",
