--- a/app/src/.eslintrc.json
+++ b/app/src/.eslintrc.json
@@ -22,6 +22,7 @@
         "plugin:react/all",
         "plugin:react-hooks/recommended",
         "plugin:unicorn/recommended",
+        "plugin:jest/all",
         "prettier"
     ],
     "rules": {
@@ -100,7 +101,7 @@
         "@typescript-eslint/init-declarations": "off",
         "@typescript-eslint/strict-boolean-expressions": ["error", { "allowAny": true }],
         "@typescript-eslint/no-unused-vars": [
-            "error",
+            "warn",
             { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }
         ],
 
@@ -134,6 +135,13 @@
         // we don't query the dom much and this dislikes the thing we do use to set up react, document.getElementById
         "unicorn/prefer-query-selector": "off",
         // not supported by TS? can't find any help online
-        "unicorn/prefer-node-protocol": "off"
+        "unicorn/prefer-node-protocol": "off",
+
+        // === jest ===
+        "jest/expect-expect": ["error", { "assertFunctionNames": ["expect*"] }],
+        "jest/prefer-expect-assertions": "off",
+        "jest/no-hooks": "off",
+        "jest/require-top-level-describe": "off",
+        "jest/consistent-test-it": ["error", { "withinDescribe": "test" }]
     }
 }
